--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -89,6 +89,7 @@
     color: black;
     text-decoration: none;
 
+
     &__img-box {
         text-align: center;
         max-width: 160px;
@@ -115,6 +116,16 @@
 
     &__main-label {
         visibility: hidden;
+    }
+
+    &--primary {
+        .in-image__main-label {
+            visibility: visible;
+        }
+
+        .in-image__make-main-buton {
+            display: none;
+        }
     }
 }
 
