--- a/app/views/ads/_editable_image_subform.html.erb
+++ b/app/views/ads/_editable_image_subform.html.erb
@@ -12,7 +12,7 @@
                 <%= ff.text_area :description, placeholder: 'Bildetekst', class: 'in-image__description' %>
                 <br>
                 <div class="in-image__button-holder">
-                    <button class="button in-image__make-main-buton">Hovedbilde</button>
+                    <button type="button" class="button in-image__make-main-buton" data-make-primary>Hovedbilde</button>
                     <%= ff.remove_nested_fields_link 'Slett', class: 'button' %>
                 </div>
             </div>
