--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,7 +1,23 @@
 <div class="container">
     <div class="row">
-        <div class="seven columns">
-            <%= render 'form' %>
+        <div class="eight columns">
+            <% if @ad.published? || @ad.waiting_review? %>
+
+                <h1 class="u-push-down-only">Rediger annonse</h1>
+                <p>
+                    Denne annonsen er allerde publisert. Hvis du
+                    redigerer den må den sendes til ny godkjenning
+                    når den er endret.
+                </p>
+                <p>
+                    <%= button_to 'Rediger', unpublish_and_edit_ad_path(@ad), form_class: 'u-inline', class: 'button' %>
+                    <%= link_to 'Gå til annonsen', @ad  %>
+                </p>
+
+
+            <% else %>
+                <%= render 'form' %>
+            <% end %>
         </div>
 
         <div class="four columns offset-by-one column">
