--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -127,7 +127,7 @@
 
     <div data-controller="adErrors"></div>
 
-    <div>
+    <div class="u-push-down">
         <%= button_to 'Send til publisering', submit_for_review_ad_path(@ad), form_class: 'u-inline', class: 'button button-primary', data: {controller: 'publishButton'} %>
         <%= button_to 'Forhåndsvisning', (ad_path @ad), method: :get, form_class: 'u-inline', class: 'button' %>
     </div>
