--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -10,15 +10,14 @@
                     links = [
                         { text: 'Siste nytt',        path: users_path },
                         { text: 'Annonser',          path: users_ads_path },
-                        { text: 'Profil',            path: edit_users_path },
+                        { text: 'Profil',            path: private_profile_users_path },
                         { text: 'Forespørsler',      path: bookings_path },
                         { text: 'Favoritter',        path: users_favorite_ads_path },
+                        { text: 'Leiehistorikk',     path: rental_history_users_path }
                     ]
 
                     unless Plendit::Application.config.x.application_mode.beta
-                        links << { text: '[Leiehistorikk]',     path: '#' }
                         links << { text: '[Betaling]',          path: payment_users_path }
-                        links << { text: '[NyProfil]',          path: private_profile_users_path }
                     end
 
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
