Renato does not like TRANSLATE_ME tags.

--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -24,6 +24,7 @@
         <div class="eight columns">
           <%= render layout: "gray_box", locals: {title: "Betaling", id: "payment"} do %>
             <!-- FIXME: need better text/layout -->
+            <!-- this makes Renato sad. -->
             TRANSLATE_ME: You must have a verified email and phone number before you can make / receive payments.
 
             <p>
