--- a/app/views/ads/list.html.erb
+++ b/app/views/ads/list.html.erb
@@ -1,5 +1,4 @@
-
-<%= render partial: "shared/personal_bar", locals: { selected: "Dine annonser" } %>
+<%= render partial: "shared/personal_bar", locals: { selected: "Annonser" } %>
 
 <div class="container">
     <div class="row">
