--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -138,14 +138,14 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   padding-top: 1rem;
-  font-weight: 500;
+  font-weight: normal;
 }
 h1 { font-size: 4.0rem; line-height: 1.2;}
 h2 { font-size: 2.5rem; line-height: 1.35;}
 h3 { font-size: 2.5rem; line-height: 1.35;}
-h4 { font-size: 1.8rem; line-height: 1.5; font-weight: 600;}
-h5 { font-size: 1.8rem; line-height: 1.5; font-weight: 600;}
-h6 { font-size: 1.5rem; line-height: 1.6; font-weight: 700;}
+h4 { font-size: 1.8rem; line-height: 1.5; font-weight: normal;}
+h5 { font-size: 1.8rem; line-height: 1.5; font-weight: normal;}
+h6 { font-size: 1.5rem; line-height: 1.6; font-weight: normal;}
 
 
 p {
