Push down footer a bit

--- a/app/assets/stylesheets/_main_footer.scss
+++ b/app/assets/stylesheets/_main_footer.scss
@@ -3,6 +3,7 @@
 .about-footer {
     background-color: black;
     color: white;
+    margin-top: 100px;
     padding-top: $standard-spacing * 3;
     padding-bottom: $standard-spacing * 3;
 
