--- a/app/assets/stylesheets/_personal_bar.scss
+++ b/app/assets/stylesheets/_personal_bar.scss
@@ -15,4 +15,16 @@
             border-bottom: 2px solid $color-plendit-blue;
         }
     }
+
+    @media (max-width: $mobile) {
+        &__link {
+            display: block;
+            padding: 4px 0 4px 0;
+
+            &--active {
+                text-decoration: underline;
+                border: none;
+            }
+        }
+    }
 }
