Adjusted backstage link

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -19,7 +19,9 @@
             <% end %>
 
             <% if current_user.is_site_admin? %>
-                <%= link_to 'backstage!', backstage_path, class: "top-bar__admin-link" %>
+                <%= link_to backstage_path, class: "top-bar__admin-link" do %>
+                    BS <%= icon 'exclamation-triangle' %>
+                <% end %>
             <% end %>
 
             <a class="top-bar__top-section" href="#"
