--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -127,11 +127,10 @@ $top-bar-height: 52px;
     }
 
     &__admin-link {
-        background-color: #b51b1b;
-        background: linear-gradient(90deg, red, orange, orange, yellow, green, green);
-        color: black;
-        font-weight: bold;
-        padding: 6px;
-        box-shadow: $subtle-shadow;
+        background-color: white;
+        color: $color-plendit-blue;
+        text-decoration: none;
+        padding: 4px;
+        border-radius: 2px;
     }
 }
