--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -2,7 +2,7 @@
 
     <%- if @user.errors.any? -%>
         <div>
-            <%= pluralize(@user.errors.count, "error") %> Følgende feil forhindret deg i å oppdatere profilen din:
+            Følgende feil forhindret deg i å oppdatere profilen din: <%= pluralize(@user.errors.count, "error") %>
             <ul>
                 <% @user.errors.full_messages.each do |message| %>
                     <li><%= message %></li>
