Updated frontpage insurance prose

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -44,8 +44,9 @@
             <%= image_tag 'logos/if_150x148.png', size: '60x59', alt: '', class: 'u-pull-left if-branding-section__logo' %>
             <h2>Skadeforsikring fra IF</h2>
             <p>
-                Slipp alle bekymringer. Hos plendit kan du velge å forsikre tingene
-                du leier ut. Ved skade har du som utleier ingen egenandel eller bonustap.
+                Slipp alle bekymringer. Alt du leier ut på plendit blir
+                forsikret gjennom If. Ved skade har du som utleier ingen
+                egenandel eller bonustap.
                 <strong>
                     <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info, target: '_blank' %>.
                 </strong>
