--- a/app/assets/stylesheets/_main_footer.scss
+++ b/app/assets/stylesheets/_main_footer.scss
@@ -1,8 +1,8 @@
 @import 'constants.scss';
 
 .about-footer {
-    background-color: black;
-    color: white;
+    background-color: $color-subtle-gray-background;
+    color: black;
     margin-top: 100px;
     padding-top: $standard-spacing * 3;
     padding-bottom: $standard-spacing * 3;
@@ -17,7 +17,7 @@
     }
 
     &__list-link {
-        color: white;
+        color: black;
     }
     
     &__legaleese {
