--- a/app/views/ads/_ad_status_bar.html.erb
+++ b/app/views/ads/_ad_status_bar.html.erb
@@ -1,40 +1,42 @@
 <% if user_signed_in? && (current_user.is_site_admin? || current_user == ad.user) %>
-    <div class="ad-status-bar ad-status-bar--<%= ad.status %>">
+    <div class="container">
+        <div class="row">
+            <div class="ad-status-bar ad-status-bar--<%= ad.status %> u-push-down">
 
-        <div class="ad-status-bar__div">
-            <h5 class="ad-status-bar__title">
-                <% if ad.status == 'published' %>
-                    Annonsen er aktiv.
-                <% elsif ad.status == 'draft' %>
-                    Annonsen er under utarbeidelse.
-                <% elsif ad.status == 'waiting_review' %>
-                    Annonsen er sendt til kontroll.
-                <% elsif ad.status == 'paused' %>
-                    Annonsen er satt på pause.
-                <% elsif ad.status == 'stopped' %>
-                    Annonsen er stoppet.
-                <% end %>
-            </h5>
+                <div class="ad-status-bar__div">
+                    <h5 class="ad-status-bar__title">
+                        <% if ad.status == 'published' %>
+                            Annonsen er aktiv.
+                        <% elsif ad.status == 'draft' %>
+                            Annonsen er under utarbeidelse.
+                        <% elsif ad.status == 'waiting_review' %>
+                            Annonsen er sendt til kontroll.
+                        <% elsif ad.status == 'paused' %>
+                            Annonsen er satt på pause.
+                        <% elsif ad.status == 'stopped' %>
+                            Annonsen er stoppet.
+                        <% end %>
+                    </h5>
+                </div>
+
+                <div>   
+                    <%= render partial: "ad_status_box", locals: { ad: ad } %>
+                </div>
+         
+                <%- if current_user.is_site_admin? -%>
+                    <div>
+                        Admin kontroll:
+                    </div>
+                    <div>
+                        <% if ad.status == 'waiting_review' %>
+                            <%= button_to 'Godkjenn', approve_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
+                        <% end %>
+                        <% if ad.status != 'suspended' %>
+                            <%= button_to 'Suspend', suspend_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
+                        <% end %>
+                    </div>
+                <%- end -%>
+            </div>
         </div>
-
-        <div>   
-            <%= render partial: "ad_status_box", locals: { ad: ad } %>
-        </div>
- 
-    <%- if current_user.is_site_admin? -%>
-    <div>
-        Admin kontroll:
-    </div>
-    <div>
-        <% if ad.status == 'waiting_review' %>
-            <%= button_to 'Godkjenn', approve_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
-        <% end %>
-        <% if ad.status != 'suspended' %>
-            <%= button_to 'Suspend', suspend_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
-        <% end %>
-    </div>
-    <%- end -%>
-
-
     </div>
 <% end %>
