Fixed some spelling

--- a/app/views/users/payment/_payout_wallet_balance.html.erb
+++ b/app/views/users/payment/_payout_wallet_balance.html.erb
@@ -1,10 +1,10 @@
 
-<%= render layout: "gray_box", locals: {title: "Din plendit Saldo", id: "payout_wallet_balance"} do %>
+<%= render layout: "gray_box", locals: {title: "Din Plendit-saldo", id: "payout_wallet_balance"} do %>
 
 <!--   foo - payout_wallet_balance -->
 
-  Din plendit Saldo: <b>xyz,-</b> NOK
+  Din Plendit-saldo: <b>xyz,-</b> NOK
 
   <br>
-  overfør til din bankkonto
+  Overfør penger til din konto
 <% end %>
