Translations & prosa changes

--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -10,12 +10,12 @@
 
     <p>
         Plendit verifiserer brukernes identitet med mobilnummer og e-post. I tillegg kan brukerne
-        koble seg til plendit med Google-, Facebook- og SPiD-kontoer.
+        koble seg til Plendit med Google-, Facebook- og SPiD-kontoer.
     </p>
 
     <h4>Betaling</h4>
     <p>
-        Betalingen skjer trygt gjennom plendit. Leiesumen reserveres ved bestilling og utbetales
+        Betalingen skjer trygt gjennom Plendit. Leiesumen reserveres ved bestilling og utbetales
         en dager etter utleien begynner.
     </p>
 
@@ -23,7 +23,7 @@
 
     <p>
         <%= image_tag "logos/if_150x148.png", alt: "", class: "ad-input-copy__badge", size: "70x70" %>
-        Alle ting du leier ut forsikres gjennom IF.
+        Alle ting du leier ut er forsikret gjennom IF.
         Les mer om din trygghet som utleier <%= link_to "her", Plendit::Application.config.x.customerservice.insurance_info, target: '_blank' %>.
     </p>
 
