--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -7,7 +7,7 @@
 
 <p>
     Det er gratis å legge ut annonser, alle brukere blir verifisert og
-    betaling utføres trygt gjennom tjenesten. plendit gir utleier en ekstra
+    betaling utføres trygt gjennom tjenesten. Plendit gir utleier en ekstra
     sikkerhet ved å tilby skadeforsikring fra IF. For å sikre en
     god brukeropplevelse gir både utleier og leietaker hverandre en rating
     av leieforholdet.  
@@ -16,7 +16,7 @@
 <h2>Bakgrunn</h2>
 
 <p>
-    Vi som har startet plendit er til daglig ansatte i FINN.no. Med hjelp
+    Vi som har startet Plendit er til daglig ansatte i FINN.no. Med hjelp
     av FINNs innovasjonsprogram «Sandbox» har vi fått muligheten til å
     utvikle plendit. FINN og Sandbox har støttet oss med infrastruktur,
     utviklingsverktøy, markedsføring samt god støtte og sparring fra
@@ -24,7 +24,7 @@
 </p>
 
 <p>
-    plendit er ikke en del av FINNs merkevare og FINN har således ikke
+    Plendit er ikke en del av FINNs merkevare og FINN har således ikke
     ansvar for tjenestens kvalitet eller innhold.
 </p>
 
