--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -44,7 +44,7 @@
             <%= image_tag 'logos/if_150x148.png', size: '60x59', alt: '', class: 'u-pull-left if-branding-section__logo' %>
             <h2>Skadeforsikring fra IF</h2>
             <p>
-                Slipp alle bekymringer. Alt du leier ut på plendit blir
+                Slipp alle bekymringer. Alt du leier ut på Plendit blir
                 forsikret gjennom If. Ved skade har du som utleier ingen
                 egenandel eller bonustap.
                 <strong>
