--- a/app/views/misc/privacy.html.erb
+++ b/app/views/misc/privacy.html.erb
@@ -5,7 +5,7 @@
 </h2>
 
 <p>
-Våre brukeres tillit er av største viktighet for oss, og plendit tar derfor ansvar for å beskytte ditt personvern.  Denne personvernerklæringen forklarer hvordan vi samler inn og benytter informasjon om våre brukere, og hvordan vi beskytter brukernes personvern. Om du har noen spørsmål om vår personvernerklæring eller håndteringen av personopplysninger må du gjerne kontakte oss på <%= Plendit::Application.config.x.customerservice.email %>.
+Våre brukeres tillit er av største viktighet for oss, og Plendit tar derfor ansvar for å beskytte ditt personvern.  Denne personvernerklæringen forklarer hvordan vi samler inn og benytter informasjon om våre brukere, og hvordan vi beskytter brukernes personvern. Om du har noen spørsmål om vår personvernerklæring eller håndteringen av personopplysninger må du gjerne kontakte oss på <%= Plendit::Application.config.x.customerservice.email %>.
 </p>
 
 <h2>
@@ -17,7 +17,7 @@ Vi respekterer din rett til personvern, og all behandling av personopplysninger 
 </p>
 
 <p>
-Hvis du har registrert en brukerkonto på plendit, vil plendit AS kunne behandle personopplysninger om deg for å levere plendits tjenester til deg og til å forbedre og videreutvikle våre tjenester. Vi behandler også personopplysninger for å kunne gi deg tilbud, anbefalinger og innhold tilpasset ditt bruksmønster, til analyse for å forstå markedstrendene og for å begrense misbruk av tjenestene.
+Hvis du har registrert en brukerkonto på Plendit, vil Plendit AS kunne behandle personopplysninger om deg for å levere Plendits tjenester til deg og til å forbedre og videreutvikle våre tjenester. Vi behandler også personopplysninger for å kunne gi deg tilbud, anbefalinger og innhold tilpasset ditt bruksmønster, til analyse for å forstå markedstrendene og for å begrense misbruk av tjenestene.
 </p>
 
 <p>
@@ -43,7 +43,7 @@ Behandlingsansvarlig er betegnelsen på den som primært har ansvar og plikter e
 <h3>Informasjon om posisjon</h3>
 
 <p>
-Vi kan få tilgang til din geografiske possisjonsdata ved hjelp av ip-adresse og/eller andre skilder. Vi ber alltid om samtykke for å bruke din posisjon i tjenesten. Informasjonen brukes eksempelvis til å vise deg annonser som er relevant for der du befinner deg og til å utarbeide statistikk.
+Vi kan få tilgang til din geografiske possisjonsdata ved hjelp av ip-adresse og/eller andre kilder. Vi ber alltid om samtykke for å bruke din posisjon i tjenesten. Informasjonen brukes eksempelvis til å vise deg annonser som er relevant for der du befinner deg og til å utarbeide statistikk.
 </p>
 
 <h2>
