--- a/app/views/users/_edit_identity.html.erb
+++ b/app/views/users/_edit_identity.html.erb
@@ -26,7 +26,7 @@
   # ** use array of identity providers or similar from config or models
 %>
     <p>
-        Du kan koble din plendit-konto til andre tjenester du bruker. Det gjør
+        Du kan koble din Plendit-konto til andre tjenester du bruker. Det gjør
         det lettere for deg å logge inn.
     </p>
     <div>
