--- a/app/views/users/_privacy_box.html.erb
+++ b/app/views/users/_privacy_box.html.erb
@@ -1,5 +1,5 @@
 <div class="privacy-box u-push-down">
-    Du kan lese mer om krav til dokumentasjon og hvordan plendit behandler
+    Du kan lese mer om krav til dokumentasjon og hvordan Plendit behandler
     personlige dokumenter
     <%= link_to 'på kundesenteret.', Rails.configuration.x.customerservice.privacy_info %>
 </div>
