--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 
             <%= render layout: "gray_box", locals: {title: "Min oversikt"} do %>
                 <p>
-                    Her får du en oversikt over den siste aktiviteten på plendit
+                    Her får du en oversikt over den siste aktiviteten på Plendit
                     som er relevant for deg.
                 </p>
                 <%= link_to 'Se min offentlige profil', user_path(current_user), class: 'button' %>
