--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -7,7 +7,7 @@
             </p>
 
             <p>
-                Noen har bedt om en lenke for å endre plendit-passord. Du kan følge denne lenken for
+                Noen har bedt om en lenke for å endre Plendit-passord. Du kan følge denne lenken for
                 å gjøre det:
                 <%= link_to 'Endre passord', edit_password_url(@resource, reset_password_token: @token) %>
             </p>
