--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,7 +16,7 @@
             <hr>
 
             <p>
-                Hvis du foretrekker det kan du opprette en egen plendit-konto under:
+                Hvis du foretrekker det kan du opprette en egen Plendit-konto under:
             </p>
 
             <div>
