--- a/app/views/users/verify_email.html.erb
+++ b/app/views/users/verify_email.html.erb
@@ -13,7 +13,7 @@
                 <p>
                     Vi har sendt en e-post til adressen:
                     <%= current_user.unconfirmed_email %>. Den inneholder
-                    en lenke for å bekrefte at dette er din adresse.
+                    en lenke som du bruker for å bekrefte at adressen tilhører deg. 
                 </p>
                 <div>
                     Har du ikke fått e-post?
