Prosa, prosa prosa - say it like you mean it

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,7 @@
 <div class="container u-push-down">
     <div class="row">
         <div class="twelve columns">
-            <h2>Velkommen <%= @email %>!</h2>
+            <h2>Velkommen til Plendit <%= @email %>!</h2>
             <p>
                 Bekreft e-postadressen din her:
 
