--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,19 +1,18 @@
 <div class="container u-push-down">
     <div class="row">
         <div class="twelve columns">
-            <h2>Tilbakestill passord</h2>
+            <h2>Tilbakestilling av Plendit-passord</h2>
             <p>
                 Hei <%= @resource.email %>!
             </p>
 
             <p>
-                Noen har bedt om en lenke for å endre Plendit-passord. Du kan følge denne lenken for
-                å gjøre det:
+                Noen har bedt om en lenke for å endre passordet for Plendit.no -  Bruk lenken under for å:
                 <%= link_to 'Endre passord', edit_password_url(@resource, reset_password_token: @token) %>
             </p>
 
             <p>
-                Hvis du ikke har bedt om å endre passord kan du ignorere denne e-posten
+                Hvis du ikke har bedt om å endre passordet ditt, kan du ignorere denne e-posten.
             </p>
         </div>
     </div>
