--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Din konto er sperret på grunn av for mange ugyldige innloggingsforsøk.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Klikk på lenken under for å åpne kontoen din igjen:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'Åpne konto', unlock_url(@resource, unlock_token: @token) %></p>
