--- a/app/assets/stylesheets/_personal_bar.scss
+++ b/app/assets/stylesheets/_personal_bar.scss
@@ -25,6 +25,7 @@
             display: inline-block;
             padding: 4px 0 4px 0;
             width: 30%;
+            text-align: center;
 
             &--active {
                 text-decoration: underline;
