--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -8,16 +8,16 @@
                     end
 
                     links = [
-                        { text: 'Siste nytt',    icon: 'question-circle', path: users_path, },
-                        { text: 'Annonser',      icon: 'file-text-o ',    path: users_ads_path },
+                        #{ text: 'Siste nytt',    icon: 'question-circle', path: users_path, },
                         { text: 'Profil',        icon: 'user',            path: private_profile_users_path },
+                        { text: 'Annonser',      icon: 'file-text-o ',    path: users_ads_path },
                         { text: 'Forespørsler',  icon: 'question-circle', path: bookings_path },
                         { text: 'Favoritter',    icon: 'heart',           path: users_favorite_ads_path },
                         { text: 'Leiehistorikk', icon: 'history',         path: rental_history_users_path }
                     ]
 
                     unless Plendit::Application.config.x.application_mode.beta
-                        links << { text: '[Betaling]',   icon: 'credit-card',       path: payment_users_path }
+                        links << { text: 'Betaling',   icon: 'credit-card',       path: payment_users_path }
                     end
 
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
