--- a/app/views/users/private_profile.html.erb
+++ b/app/views/users/private_profile.html.erb
@@ -5,9 +5,7 @@
         <div class="eight columns">
             <h1>Din profil</h1>
 
-
             <%= render layout: "gray_box", locals: {title: ''} do %>
-
                 <div class="biz-card">
                     <div class="biz-card__avatar">
                         <%= avatar_image current_user, :huge %>
@@ -22,6 +20,8 @@
                         <%= link_to 'Rediger min profil', edit_users_path %>
                         <br>
                         <%= link_to 'Gå til min offentlige profil', user_path(current_user) %>
+                        <br>
+                        <%= link_to 'Logg ut', destroy_user_session_path, method: :delete %>
                     </div>
                 </div>
             <% end %>
